; ModuleID = '/home/carl/AnghaBench/linux/drivers/target/extr_target_core_spc.c_spc_modesense_long_blockdesc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/target/extr_target_core_spc.c_spc_modesense_long_blockdesc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32)* @spc_modesense_long_blockdesc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spc_modesense_long_blockdesc(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp ule i32 %8, -1
  br i1 %9, label %10, label %17

10:                                               ; preds = %3
  %11 = load i8*, i8** %5, align 8
  %12 = getelementptr inbounds i8, i8* %11, i64 3
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @spc_modesense_blockdesc(i8* %12, i32 %13, i32 %14)
  %16 = add nsw i32 %15, 3
  store i32 %16, i32* %4, align 4
  br label %32

17:                                               ; preds = %3
  %18 = load i8*, i8** %5, align 8
  %19 = getelementptr inbounds i8, i8* %18, i32 1
  store i8* %19, i8** %5, align 8
  store i8 1, i8* %18, align 1
  %20 = load i8*, i8** %5, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 2
  store i8* %21, i8** %5, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = getelementptr inbounds i8, i8* %22, i32 1
  store i8* %23, i8** %5, align 8
  store i8 16, i8* %22, align 1
  %24 = load i32, i32* %6, align 4
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @put_unaligned_be64(i32 %24, i8* %25)
  %27 = load i8*, i8** %5, align 8
  %28 = getelementptr inbounds i8, i8* %27, i64 12
  store i8* %28, i8** %5, align 8
  %29 = load i32, i32* %7, align 4
  %30 = load i8*, i8** %5, align 8
  %31 = call i32 @put_unaligned_be32(i32 %29, i8* %30)
  store i32 17, i32* %4, align 4
  br label %32

32:                                               ; preds = %17, %10
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @spc_modesense_blockdesc(i8*, i32, i32) #1

declare dso_local i32 @put_unaligned_be64(i32, i8*) #1

declare dso_local i32 @put_unaligned_be32(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
